# prism

./: .gitignore  CLAUDE.md  Cargo.toml  HANDOFF-2026-04-30-EVENING.md  Justfile  README.md  SESSION-HANDOFF.md  STATE-MANAGER-CHECKLIST.md  STATE.md  clippy.toml  current-cycle  deny.toml  kani.toml  lefthook.yml  policies.yaml  project.yaml  reference-manifest.yaml  rust-toolchain.toml  rustfmt.toml  sidecar-learning.md  tech-debt-register.md  vsdd-plugin-tech-debt.md  wave-state.yaml
crates/ocsf-proto-gen/: Cargo.toml
crates/ocsf-proto-gen/src/: codegen.rs  error.rs  lib.rs  schema.rs  type_map.rs
crates/prism-audit/: Cargo.toml
crates/prism-audit/src/: audit_emitter.rs  audit_entry.rs  boot_emitter.rs  credential_events.rs  flag_events.rs  lib.rs  org_slug_guard.rs  redaction.rs  token_events.rs  vector_compat.rs  write_audit.rs
crates/prism-audit/tests/: sec007_org_slug_cross_check.rs
crates/prism-bin/: Cargo.toml
crates/prism-bin/src/: boot.rs  cli.rs  exit_codes.rs  lib.rs  main.rs  plugin_audit.rs  signals.rs
crates/prism-bin/tests/: bc_2_03_013_credential_init.rs  bc_2_05_012_audit_init.rs  bc_2_06_011_config_load.rs  bc_2_21_001_org_registry_init.rs  bc_2_22_001_boot_orchestration.rs  cli_subcommands.rs  exit_code_contract.rs  plugin_boot_tests.rs  signal_handlers.rs
crates/prism-core/: Cargo.toml
crates/prism-core/src/: alert.rs  audit_risk.rs  cache.rs  capability.rs  case.rs  column.rs  config.rs  credentials.rs  cursor.rs  decorator_context.rs  dtu.rs  error.rs  ids.rs  internal_table_descriptor.rs  lib.rs  org_registry.rs  risk.rs  safety.rs  sensor_id.rs  storage.rs  table_type.rs  telemetry.rs  tenant.rs  trust.rs  types.rs  virtual_fields.rs
crates/prism-core/tests/: ac_1_tenant_id_rejects_empty.rs  ac_2_tenant_id_valid_input.rs  ac_3_tenant_id_rejects_path_traversal.rs  ac_4_storage_domain_all_16.rs  ac_5_prism_error_display.rs  ac_7_tenant_id_serde_round_trip.rs  ac_8_ac_9_tenant_id_boundary.rs  bc_3_1_001_org_id.rs  bc_3_1_003_org_registry.rs  bc_3_2_005_dtu_registry.rs  bc_3_7_001_check_crate_layout_test.rs  hs_006_anchor_test.rs  hs_007_anchor_test.rs  new_unchecked_audit.rs  org_slug_from_uuid_prefix.rs  sensor_id_validation_error_reexport.rs  sensor_id_validator_parity.proptest-regressions  sensor_id_validator_parity.rs  telemetry_double_init.rs
crates/prism-credentials/: Cargo.toml
crates/prism-credentials/src/: audit.rs  crud.rs  error.rs  file.rs  index.rs  keyring.rs  lib.rs  namespace.rs  probe.rs  resolution.rs  resolve_secret.rs  secret.rs  selector.rs  trait_.rs
crates/prism-credentials/tests/: bc_2_03_005_credential_crud.rs  bc_2_03_006_credential_resolution.rs  bc_2_03_007_secret_redaction.rs  bc_2_03_009_resolve_secret.rs  bc_2_03_010_audit_logging.rs  bc_3_2_002_org_id_namespace.proptest-regressions  bc_3_2_002_org_id_namespace.rs  bc_3_2_002_trait_impl.rs  keyring_org_id.rs
crates/prism-customer-config/: Cargo.toml
crates/prism-customer-config/src/: boot.rs  credential_check.rs  error.rs  lib.rs  schema.rs  validator.rs
crates/prism-customer-config/tests/: cr003_slug_pattern.rs  path_traversal.rs  sec006_toml_multiline_redaction.rs  sec_p3_001_inline_table_redaction.rs  sec_p3_002_pipe_anchor.rs  startup_boot_test.rs  validation_tests.rs
crates/prism-dtu-armis/: Cargo.toml
crates/prism-dtu-armis/fixtures/: alerts.json  device-activity.json  devices.json
crates/prism-dtu-armis/src/: clone.rs  generator.rs  lib.rs  state.rs  types.rs
crates/prism-dtu-armis/tests/: ac_1_aql_capture_and_device_list.rs  ac_2_timestamp_fallback_fixture.rs  ac_3_stateful_tag_add.rs  ac_4_tag_delete.rs  ac_5_missing_bearer_403.rs  ac_6_rate_limit_429.rs  ac_7_fidelity_validator.rs  bc_3_4_armis_generator.rs  cr012_validate_org_id_consistency.rs  cr017_tag_alert_org_id_guard.rs  cr023_activity_risk_org_id_guard.rs  dtu_reset_auth.rs  fidelity_validator.rs  harness_tests.rs  multi_tenant.proptest-regressions  multi_tenant.rs  reset_state_invariants.rs  td_wv0_04_configure_deny_unknown.rs  td_wv0_07_configure_requires_admin_token.rs  x_org_id_auth.rs
crates/prism-dtu-claroty/: Cargo.toml
crates/prism-dtu-claroty/fixtures/: alerted-devices.json  alerts.json  devices.json  vulnerabilities.json  vulnerability-devices.json
crates/prism-dtu-claroty/src/: clone.rs  generator.rs  lib.rs  state.rs  types.rs
crates/prism-dtu-claroty/tests/: ac_1_devices_list.rs  ac_2_group_by.rs  ac_3_tag_add_persists.rs  ac_4_tag_remove.rs  ac_5_auth.rs  ac_6_rate_limit.rs  ac_7_internal_error.rs  ac_8_reset.rs  bc_3_4_claroty_generator.rs  dtu_reset_auth.rs  edge_cases.rs  fidelity.rs  fidelity_validator.rs  harness_tests.rs  multi_tenant.rs  sec_p3_003_constant_time_admin_token.rs  td_wv0_04_configure_deny_unknown.rs  td_wv0_07_configure_requires_admin_token.rs  x_org_id_auth.rs
crates/prism-dtu-common/: Cargo.toml
crates/prism-dtu-common/src/: clone.rs  config.rs  fidelity.rs  fixture.rs  lib.rs  seed.rs  syslog.rs  test_utils.rs  webhook.rs
crates/prism-dtu-common/tests/: ac_1_behavioral_clone_start.rs  ac_2_failure_layer_rate_limit.rs  ac_3_failure_layer_auth_reject.rs  ac_4_latency_layer_delay.rs  ac_5_seeded_rng_determinism.rs  ac_6_syslog_receiver.rs  ac_7_webhook_receiver.rs  ac_8_fidelity_validator.rs  ac_9_fixture_loader.rs  bc_3_4_001_003_archetype_genopts.rs  (+1 more)
crates/prism-dtu-crowdstrike/: Cargo.toml
crates/prism-dtu-cyberint/: Cargo.toml
crates/prism-dtu-demo-server/: Cargo.toml  README.md
crates/prism-dtu-harness/: Cargo.toml  README.md
crates/prism-dtu-nvd/: Cargo.toml
crates/prism-dtu-pagerduty/: Cargo.toml
crates/prism-dtu-slack/: Cargo.toml
crates/prism-dtu-threatintel/: Cargo.toml
crates/prism-mcp/: Cargo.toml
crates/prism-ocsf/: Cargo.toml  build.rs
crates/prism-query/: Cargo.toml  clippy.toml
crates/prism-security/: Cargo.toml
crates/prism-sensors/: Cargo.toml
crates/prism-spec-engine/: Cargo.toml
crates/prism-storage/: Cargo.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_injection_scanner.rs  normalize_fuzz.rs  spec_parser.rs  vp021_parse_fuzz.rs  vp037_alias_fuzz.rs
(+3321 files in other folders)
