[workspace]
resolver = "2"
members = [
    "crates/ocsf-proto-gen",
    "crates/prism-core",
    "crates/prism-credentials",
    "crates/prism-dtu-common",
    "crates/prism-dtu-crowdstrike",
    "crates/prism-dtu-claroty",
    "crates/prism-dtu-cyberint",
    "crates/prism-dtu-armis",
    "crates/prism-dtu-threatintel",
    "crates/prism-dtu-nvd",
    "crates/prism-dtu-pagerduty",
    "crates/prism-dtu-jira",
    "crates/prism-dtu-demo-server",
    "crates/prism-mcp",
    "crates/prism-ocsf",
    "crates/prism-security",
    "crates/prism-spec-engine",
    "crates/prism-storage",
    "crates/prism-audit",
]

# NOTE: dtu feature declared per-crate starting with S-6.06 (prism-dtu-common).
# NO [features] at workspace root — per v1.4 spec.

[workspace.lints.clippy]
await_holding_lock = "deny"
unwrap_used = "deny"
expect_used = "deny"
