[workspace]
resolver = "2"
exclude = [
    # BC-2.11.006 v1.10: compile-fail perimeter test — must NOT be in workspace members.
    # Building this crate is expected to fail (visibility violation); including it in
    # the workspace would break every `cargo build --workspace` run.
    "tests/external/perimeter-violation",
    # AC-5 S-PLUGIN-PREREQ-C: compile-fail non-exhaustive violation test — must NOT be in workspace members.
    # Building this crate is expected to fail (E0639 — non-exhaustive struct expression); including
    # it in the workspace would break every `cargo build --workspace` run.
    "tests/external/non-exhaustive-violation",
]
members = [
    "crates/ocsf-proto-gen",
    "crates/prism-bin",
    "crates/prism-core",
    "crates/prism-credentials",
    "crates/prism-dtu-common",
    "crates/prism-dtu-crowdstrike",
    "crates/prism-dtu-claroty",
    "crates/prism-dtu-cyberint",
    "crates/prism-dtu-armis",
    "crates/prism-dtu-threatintel",
    "crates/prism-dtu-nvd",
    "crates/prism-dtu-pagerduty",
    "crates/prism-dtu-jira",
    "crates/prism-dtu-slack",
    "crates/prism-dtu-demo-server",
    "crates/prism-mcp",
    "crates/prism-ocsf",
    "crates/prism-security",
    "crates/prism-spec-engine",
    "crates/prism-sensors",
    "crates/prism-storage",
    "crates/prism-audit",
    "crates/prism-query",
    "crates/prism-customer-config",
    "crates/prism-dtu-harness",
]

# NOTE: dtu feature declared per-crate starting with S-6.06 (prism-dtu-common).
# NO [features] at workspace root — per v1.4 spec.

[workspace.lints.clippy]
await_holding_lock = "deny"
unwrap_used = "deny"
expect_used = "deny"
