[package]
name = "prism-fuzz"
version = "0.1.0"
edition = "2021"
publish = false

# cargo-fuzz workspace member — must not be included in normal workspace builds.
# Run with: cargo +nightly fuzz run <target>

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

# prism-security fuzz dependencies (S-1.02 fuzz targets).
prism-security = { path = "../crates/prism-security" }
prism-spec-engine = { path = "../crates/prism-spec-engine" }

# Prevent this target from being built as part of the workspace
[workspace]

# prism-ocsf fuzz dependencies (S-1.04 fuzz targets).
prism-ocsf = { path = "../crates/prism-ocsf" }
serde_json = "1"

# Silence workspace lint rules for fuzz targets (unwrap is acceptable in harnesses).
[lints.rust]
unexpected_cfgs = "allow"

[lints.clippy]
unwrap_used = "allow"

[[bin]]
name = "fuzz_injection_scanner"
path = "fuzz_targets/fuzz_injection_scanner.rs"
test = false
doc = false

[[bin]]
name = "spec_parser"
path = "fuzz_targets/spec_parser.rs"
test = false
doc = false

[[bin]]
name = "normalize_fuzz"
path = "fuzz_targets/normalize_fuzz.rs"
test = false
doc = false
