[package]
name = "prism-fuzz"
version = "0.1.0"
edition = "2021"
publish = false

# cargo-fuzz workspace member — must not be included in normal workspace builds.
# Run with: cargo +nightly fuzz run <target>

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

# prism-security fuzz dependencies (S-1.02 fuzz targets).
prism-security = { path = "../crates/prism-security" }
prism-spec-engine = { path = "../crates/prism-spec-engine" }

# prism-ocsf fuzz dependencies (S-1.04 fuzz targets).
prism-ocsf = { path = "../crates/prism-ocsf" }
serde_json = "1"

# prism-query fuzz dependencies (S-3.01 VP-021 fuzz target).
prism-query = { path = "../crates/prism-query" }

# Prevent this target from being built as part of the workspace
[workspace]

# Silence workspace lint rules for fuzz targets (unwrap is acceptable in harnesses).
[lints.rust]
unexpected_cfgs = "allow"

[lints.clippy]
unwrap_used = "allow"

[[bin]]
name = "fuzz_injection_scanner"
path = "fuzz_targets/fuzz_injection_scanner.rs"
test = false
doc = false

[[bin]]
name = "spec_parser"
path = "fuzz_targets/spec_parser.rs"
test = false
doc = false

[[bin]]
name = "normalize_fuzz"
path = "fuzz_targets/normalize_fuzz.rs"
test = false
doc = false

# S-3.01 VP-021 — PrismQlParser never panics on arbitrary byte input.
[[bin]]
name = "vp021_parse_fuzz"
path = "fuzz_targets/vp021_parse_fuzz.rs"
test = false
doc = false

# S-3.04 VP-037 — AliasResolver::expand() never panics on arbitrary alias graphs.
[[bin]]
name = "vp037_alias_fuzz"
path = "fuzz_targets/vp037_alias_fuzz.rs"
test = false
doc = false
