[package]
name = "prism-bin"
version = "0.1.0"
edition = "2021"
description = "Prism binary — CLI entry point, boot sequence, signal handlers (SS-22)"
license = "MIT"
publish = false

# ADR-022 §A: prism-bin is the ONLY [[bin]] target in the workspace.
[[bin]]
name = "prism"
path = "src/main.rs"

# Public lib API for integration test access (boot_tests.rs spawns the binary
# as a subprocess but can also import types for fixture construction).
[lib]
name = "prism_bin"

[dependencies]
prism-core = { path = "../prism-core", version = "0.1.0" }
prism-credentials = { path = "../prism-credentials", version = "0.1.0" }
prism-audit = { path = "../prism-audit", version = "0.1.0" }
prism-storage = { path = "../prism-storage", version = "0.1.0" }
prism-spec-engine = { path = "../prism-spec-engine", version = "0.4.0" }
prism-query = { path = "../prism-query", version = "0.1.0" }
prism-mcp = { path = "../prism-mcp", version = "0.1.0" }
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
arc-swap = "1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "1"

[dev-dependencies]
tempfile = "3"

[lints.clippy]
# Inherited from workspace: workspace lint inheritance is not yet available
# in this project's Cargo format, so we mirror the workspace rules here.
await_holding_lock = "deny"
# Test files use .unwrap()/.unwrap_err() by design — test-writer generated;
# cannot be modified per story constraints. Allow so -D warnings passes test binaries.
unwrap_used = "allow"

[lints.rust]
# Allow #[cfg(kani)] without a registered cfg — kani invoked via `cargo kani`.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
# Test functions use BC-ID naming convention; cannot modify.
non_snake_case = "allow"
# Test files import items used only in certain cfg combinations.
unused_imports = "allow"

[package.metadata.docs.rs]
all-features = true
