[package]
name = "prism-core"
version = "0.1.0"
edition = "2021"
description = "Prism foundational types — dependency root for the entire workspace"
license = "MIT"
publish = false

[lib]
name = "prism_core"

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
regex = "1"
uuid = { version = "1", features = ["v7", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
bimap = "0.6"

[dev-dependencies]
serde_json = "1"
regex = "1"
tempfile = "3"
proptest = "1"
uuid = { version = "1", features = ["v7"] }

[[test]]
name = "ac_1_tenant_id_rejects_empty"
path = "tests/ac_1_tenant_id_rejects_empty.rs"

[[test]]
name = "ac_2_tenant_id_valid_input"
path = "tests/ac_2_tenant_id_valid_input.rs"

[[test]]
name = "ac_3_tenant_id_rejects_path_traversal"
path = "tests/ac_3_tenant_id_rejects_path_traversal.rs"

[[test]]
name = "ac_4_storage_domain_all_16"
path = "tests/ac_4_storage_domain_all_16.rs"

[[test]]
name = "ac_5_prism_error_display"
path = "tests/ac_5_prism_error_display.rs"

[[test]]
name = "ac_7_tenant_id_serde_round_trip"
path = "tests/ac_7_tenant_id_serde_round_trip.rs"

[[test]]
name = "ac_8_ac_9_tenant_id_boundary"
path = "tests/ac_8_ac_9_tenant_id_boundary.rs"

[[test]]
name = "telemetry_double_init"
path = "tests/telemetry_double_init.rs"

[[test]]
name = "hs_007_anchor_test"
path = "tests/hs_007_anchor_test.rs"

[[test]]
name = "hs_006_anchor_test"
path = "tests/hs_006_anchor_test.rs"

[[test]]
name = "bc_3_7_001_check_crate_layout_test"
path = "tests/bc_3_7_001_check_crate_layout_test.rs"

[[test]]
name = "bc_3_1_003_org_registry"
path = "tests/bc_3_1_003_org_registry.rs"

[lints.rust]
# From workspace lints — must be re-stated when not using workspace = true
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
# S-1.02 test functions use BC-ID naming convention (e.g. test_BC_S_02_001_*).
# The test-writer generated these names; this crate cannot modify them.
non_snake_case = "allow"

[lints.clippy]
# From workspace lints
await_holding_lock = "deny"
# Test files (ac_*.rs, hs_006_anchor_test.rs) use .unwrap()/.expect() by design —
# test-writer generated them; this crate cannot modify them. Keep at allow so
# -D warnings does not fail test binary compilation.
unwrap_used = "allow"
expect_used = "allow"
