[package]
name = "prism-credentials"
version = "0.1.0"
edition = "2021"
description = "Credential store trait, backends, CRUD, resolution, secret redaction, and audit logging for Prism"
license = "MIT"
publish = false

[lib]
name = "prism_credentials"

[dependencies]
prism-core = { path = "../prism-core" }

async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

# Secret/zeroize
secrecy = { version = "0.8", features = ["serde"] }
zeroize = { version = "1", features = ["derive"] }

# Keyring backend (keyring-rs 3.x)
keyring = "3"

# AES-256-GCM encryption
aes-gcm = "0.10"

# Key derivation — Argon2id per BC-2.03.003 v1.4
argon2 = "0.5"

# Nonce / salt generation
rand = "0.8"

# Base64 for file format encoding
base64 = "0.22"

# chrono for timestamps
chrono = { version = "0.4", features = ["serde"] }

# sha2 for content hashing
sha2 = "0.10"

# uuid v7 for time-ordered confirmation tokens (TD-S-1.07-02)
uuid = { version = "1", features = ["v7"] }

[dev-dependencies]
proptest = "1"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
secrecy = { version = "0.8", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
prism-core = { path = "../prism-core" }

[[test]]
name = "bc_2_03_005_credential_crud"
path = "tests/bc_2_03_005_credential_crud.rs"

[[test]]
name = "bc_2_03_006_credential_resolution"
path = "tests/bc_2_03_006_credential_resolution.rs"

[[test]]
name = "bc_2_03_007_secret_redaction"
path = "tests/bc_2_03_007_secret_redaction.rs"

[[test]]
name = "bc_2_03_009_resolve_secret"
path = "tests/bc_2_03_009_resolve_secret.rs"

[[test]]
name = "bc_2_03_010_audit_logging"
path = "tests/bc_2_03_010_audit_logging.rs"

[[test]]
name = "bc_3_2_002_org_id_namespace"
path = "tests/bc_3_2_002_org_id_namespace.rs"

# Override workspace lints for this crate to allow test-writer naming conventions.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
non_snake_case = "allow"

[lints.clippy]
await_holding_lock = "deny"
unwrap_used = "allow"
useless_conversion = "allow"
