[package]
name = "prism-customer-config"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "TOML schema, parser, and startup validator for Prism customer configuration files (S-3.3.01)"
publish = false

[lib]
name = "prism_customer_config"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
uuid = { version = "1", features = ["v7", "serde"] }
thiserror = "1"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
# Test functions use BC-ID naming convention; cannot modify.
non_snake_case = "allow"

[lints.clippy]
# From workspace lints
await_holding_lock = "deny"
# Test files use .unwrap()/.unwrap_err() by design — test-writer generated them.
unwrap_used = "allow"
expect_used = "allow"
