[package]
name = "prism-customer-config"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "TOML schema, parser, and startup validator for Prism customer configuration files (S-3.3.01)"
publish = false

[lib]
name = "prism_customer_config"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
uuid = { version = "1", features = ["v7", "serde"] }
thiserror = "1"
tracing = "0.1"
# S-3.3.02: boot orchestrator needs OrgRegistry, OrgId, OrgSlug from prism-core
prism-core = { path = "../prism-core", version = "0.2.0" }

[dev-dependencies]
tempfile = "3"

[[test]]
name = "startup_boot_test"
path = "tests/startup_boot_test.rs"

[[test]]
name = "path_traversal"
path = "tests/path_traversal.rs"

# W3-FIX-CODE-002: CR-003 OrgSlug pattern validation stubs (Red Gate phase 1)
[[test]]
name = "cr003_slug_pattern"
path = "tests/cr003_slug_pattern.rs"

# W3-FIX-CODE-002: SEC-006 multi-line TOML credential redaction stubs (Red Gate phase 1)
[[test]]
name = "sec006_toml_multiline_redaction"
path = "tests/sec006_toml_multiline_redaction.rs"

# W3-FIX-SEC-004: SEC-P3-001 inline-table credential redaction (Red Gate)
[[test]]
name = "sec_p3_001_inline_table_redaction"
path = "tests/sec_p3_001_inline_table_redaction.rs"

# W3-FIX-SEC-004: SEC-P3-002 / CR-019 find_snippet_pipe digit-prefix anchor (Red Gate)
[[test]]
name = "sec_p3_002_pipe_anchor"
path = "tests/sec_p3_002_pipe_anchor.rs"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
# Test functions use BC-ID naming convention; cannot modify.
non_snake_case = "allow"

[lints.clippy]
# From workspace lints
await_holding_lock = "deny"
# Test files use .unwrap()/.unwrap_err() by design — test-writer generated them.
unwrap_used = "allow"
expect_used = "allow"
