[package]
name = "prism-dtu-claroty"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false
description = "L4-adversarial behavioral clone of the Claroty xDome API"

[features]
dtu = []

[dependencies]
prism-dtu-common = { path = "../prism-dtu-common", version = "0.1.0", features = ["dtu"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
http = "1"
anyhow = "1"
tracing = "0.1"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[[test]]
name = "fidelity"
path = "tests/fidelity.rs"
required-features = ["dtu"]

[lints]
workspace = true
